--- a/css/style.css
+++ b/css/style.css
@@ -140,20 +140,24 @@ font-weight: bold;
 .tab-links.active-link::after {
   width: 100%;
 }
-.tab-contents {
+.tab-contents,
+.tab-content {
   display: none;
   transition: all 0.5s ease;
 }
 .active-tab {
   display: block;
 }
-.tab-contents ul li {
+.tab-contents ul li,
+.tab-content ul li {
   list-style: none;
-  margin: 40px 0;
+  margin: 20px 0;
 }
-.tab-contents ul li span {
+.tab-contents ul li span,
+.tab-content ul li span  {
   color: var(--second-color);
   font-size: 14px;
+ 
 }
 
 ul .skills-bar {
@@ -162,7 +166,8 @@ ul .skills-bar {
  
 }
 
-.tab-contents ul li {
+.tab-contents ul li,
+.tab-content ul li {
 
   position: relative;
 }
