--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,31 @@ body {
     border-radius: 10px;
    
 }
+/* fixed icon whatsapp */
+.whatsIcon{
+  position: fixed;
+  left: 15px;
+  bottom: 15px;
+  z-index: 1000;
+  
+}
+.whatsIcon2{
+  text-decoration: none;
+}
+.whatsIcon1{
+ 
+  background-color: var(--main-color);
+  color: white;
+  font-size: 40px;
+width: 50px;
+height: 50px;
+ display: flex;
+ justify-content: center;
+ align-items: center;
+ border-radius: 50%;
+}
+
+/* fixed icon whatsapp */
 .header {
   width: 100%;
   height: 100vh;
